[package]
name = "runtime-tester"
version = "0.0.0"
authors = ["hkt Inc <hello@hktprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"

[dependencies]
byteorder = "1.2"
cpu-time = "1.0"
libfuzzer-sys = { version = "0.4"}
tracing = "0.1.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

hkt-chain = { path = "../../chain/chain" }
hkt-chain-configs = { path = "../../core/chain-configs" }
hkt-crypto = { path = "../../core/crypto" }
hkt-client = { path = "../../chain/client" }
hkt-client-primitives = { path = "../../chain/client-primitives" }
hktcore = { path = "../../hktcore" }
hkt-primitives = { path = "../../core/primitives" }
hkt-store = { path = "../../core/store" }
hkt-o11y = { path = "../../core/o11y" }
hkt-test-contracts = { path = "../../runtime/hkt-test-contracts" }

[dev-dependencies]
testlib = { path = "../testlib" }
